sign-up page methods are added

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,6 @@
 url = https://www.lcwaikiki.com/tr-TR/TR
 implicityWait = 10
 pageLoadTimeout = 5
+selectedProductSize = ""
+selectedProductQuantity = 0
+selectedProductCode = ""
